<resources>
    <string name="app_name">Kegeln</string>
    <string name="action_settings">Settings</string>

    <string name="editText_errorMessage">Das Feld darf nicht leer sein.</string>

    <string name="button_neuer_spieltag">Neuer Spieltag</string>
    <string name="button_spielerverwaltung">Spielerverwaltung</string>
    <string name="button_strafenverwaltung">Strafenverwaltung</string>

    <string name="eingabe_vorname">Vorname</string>
    <string name="eingabe_nachname">Nachname</string>
    <string name="eingabe_geburtsdatum">TT.MM.JJJJ</string>

    <string name="eingabe_bezeichnung">Bezeichnung</string>
    <string name="eingabe_preis">00,00</string>

    <string name="button_spieler_hinzufuegen">Hinzufügen</string>
    <string name="button_strafe_hinzufuegen">Hinzufügen</string>

    <string name="button_neues_spiel_starten">Neues Spiel</string>
    <string name="button_spiel_fortsetzen">Spiel Fortsetzen</string>

</resources>
