<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Strafenverwaltung">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/eingabe_bezeichnung"
                android:id="@+id/eingabe_bezeichnung"
                android:layout_weight="0.16" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/eingabe_preis"
                android:hint="@string/eingabe_preis"
                android:layout_weight="0.16" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_strafe_hinzufuegen"
            android:id="@+id/button_strafe_hinzufuegen" />


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listview_alle_strafen"
            android:layout_gravity="center_horizontal" />


</LinearLayout>